--- a/package.json
+++ b/package.json
@@ -17,7 +17,15 @@
   },
   "homepage": "https://github.com/arpee/learningactions#readme",
   "dependencies": {
-    "eslint": "^8.47.0",
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "eslint": "^8.47.0",
+    "eslint-config-standard-with-typescript": "^37.0.0",
+    "eslint-plugin-import": "^2.28.0",
+    "eslint-plugin-n": "^16.0.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "typescript": "^5.1.6"
   }
 }
