--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
+    "eslint-config-prettier": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "eslint": "^8.47.0",
     "eslint-config-standard-with-typescript": "^37.0.0",
