--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,6 @@
 ---
 name: TestBranches
 on:
-  push:
-    branches:
-      - dev
   pull_request:
     branches:
       - dev
@@ -21,5 +18,6 @@ jobs:
       - name: Check if PR into Master from Dev
         if: (github.base_ref == 'main' || github.event.pull_request.base.ref == 'main') && !(github.head_ref == 'dev' || github.event.pull_request.head.ref == 'dev')
         run: echo "can only pr to master from dev"
+        core.setFailed('Coverage test below tolerance')
 
 
